# trino

./: .gitignore  README.md  manage.py  pyproject.toml  render.yaml
posts/: admin.py  models.py  serializers.py  urls.py  views.py  web.py  web_urls.py
posts/migrations/: 0001_initial.py  0002_comment.py  0003_like.py  0004_follow.py  0005_profile.py
posts/static/posts/: style.css
posts/templates/posts/: base.html  cadastro.html  conexoes.html  entrar.html  explorar.html  feed.html  home.html  perfil.html  post_detalhe.html  trocar_senha.html
trino/: asgi.py  settings.py  urls.py  wsgi.py
