[project]
name = "trino"
version = "0.1.0"
description = ""
authors = [
    {name = "thaissy",email = "thaissy@thaissy-LINUX.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
